#copying Data (useful when debugging)
#load subdir
ADD_SUBDIRECTORY( Battlefield )
ADD_SUBDIRECTORY( Characters )
ADD_SUBDIRECTORY( DTDs )
ADD_SUBDIRECTORY( Fonts )
ADD_SUBDIRECTORY( Interface )
ADD_SUBDIRECTORY( Items )
ADD_SUBDIRECTORY( Movies )
ADD_SUBDIRECTORY( Musics )
ADD_SUBDIRECTORY( SFXs )
